<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_8sdp"
    android:paddingLeft="@dimen/_8sdp"
    android:paddingRight="@dimen/_8sdp"
    android:paddingTop="@dimen/_8sdp"
    android:scrollbars="vertical"
    tools:context="legacy.InfoActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/complete_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_information"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inf_titlePOIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/complete_information"
            android:text="@string/inst_send_POI_tittle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inf_POIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inf_titlePOIS"
            android:text="@string/inst_send_POI_" />

        <TextView
            android:id="@+id/inf_titleTOURS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_POIS"
            android:text="@string/inst_send_TOUR_tittle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inf_TOURS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_titleTOURS"
            android:text="@string/inst_send_TOUR" />

        <TextView
            android:id="@+id/import_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inf_TOURS"
            android:text="@string/import_pois_tittle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/import_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_tittle"
            android:text="@string/import_introduction" />

        <TextView
            android:id="@+id/import_inst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_introduction"
            android:text="@string/import_instructions" />

        <TextView
            android:id="@+id/icons_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_inst"
            android:text="@string/icons_tittle"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_drawable_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icons_tittle"
            android:backgroundTint="@color/whiteGrey"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_drawable_icon"
            android:text="@string/add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_box_drawable_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/whiteGrey"
            android:layout_below="@id/add"
            app:srcCompat="@drawable/ic_add_box_black_24dp" />

        <TextView
            android:id="@+id/addBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_box_drawable_icon"
            android:text="@string/addBox" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addBox"
            app:srcCompat="@drawable/ic_mode_edit_black_24dp"
            app:tint="@color/whiteGrey"
            app:backgroundTint="@color/yellow" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_icon"
            android:text="@string/edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            app:tint="@color/whiteGrey"
            app:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/delete_icon"
            android:text="@string/delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirm_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remove"
            app:tint="@color/whiteGrey"
            app:srcCompat="@drawable/ic_check_black_24dp"
            app:backgroundTint="@color/green" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_icon"
            android:text="@string/confirm" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stop_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm"
            app:tint="@color/whiteGrey"
            app:srcCompat="@drawable/ic_stop_black_24dp"
            app:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stop_icon"
            android:text="@string/stop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stop"
            app:tint="@color/whiteGrey"
            app:srcCompat="@drawable/ic_close_black_24dp"
            app:backgroundTint="@color/material_grey" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cancel_icon"
            android:text="@string/cancelButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cancelButton"
            app:tint="@color/whiteGrey"
            app:srcCompat="@drawable/ic_search_black_24dp"
            app:backgroundTint="@color/blue" />

        <TextView
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_icon"
            android:text="@string/searchText" />
    </RelativeLayout>

</ScrollView>
