<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/launchTask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/context_menu_launch_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stopTask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:icon="@drawable/ic_stop_black_24dp"
        android:title="@string/context_menu_stop_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/editTask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/context_menu_edit_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteTask"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/context_menu_delete_task"
        app:showAsAction="never" />


</menu>