<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playTaskHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_play_arrow_black_24dp"
                android:text="@string/playTaskHelpText" />

            <TextView
                android:id="@+id/stopTaskHelp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_stop_black_24dp"
                android:text="@string/stopTaskHelpText" />

            <TextView
                android:id="@+id/editTaskHelp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_edit_black_24dp"
                android:text="@string/editTaskHelpText" />

            <TextView
                android:id="@+id/deleteTaskHelp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                android:text="@string/deleteTaskHelpText" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_400sdp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/addnewtask" />

            <TextView
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/taskDialogHelpText" />

            <Button
                android:id="@+id/dialogButtonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/gotIt" />
        </LinearLayout>
</ScrollView>


